test/expected/cli/mimic_parse_error_located.out
shit: TMPDIR/unterminated:1:1: error: Unterminated brace group.
     1 |  {
       |  ^~ here.
shit: 2:10: note:
     2 |    echo hi
       |           ^~ Expected '}'.
rc=0
